# ocrd-webapi-implementation

./: .gitignore  Dockerfile  Makefile  README.md  config-test.yml  config_docker.yml  docker-compose.yml  flake8  processor_config.yml  pyproject.toml  readme.md  requirements.txt  requirements_3.7.txt  setup.cfg  setup.py  setup.py.bak  webapi-tests.postman_collection.json
ocrd-webapi-test/: constants.py  discovery.py  main.py  models.py  utils.py  workspace.py
ocrd_webapi/: auth.py  authentication.py  config.py  constants.py  database.py  database_models.py  discovery.py  exceptions.py  main.py  models.py  nextflow.py  resource_manager.py  utils.py  workflow_manager.py  workspace_manager.py
ocrd_webapi/managers/: __init__.py  nextflow_manager.py  resource_manager.py  workflow_manager.py  workspace_manager.py
ocrd_webapi/models/: __init__.py  base.py  database.py  discovery.py  ocrd_messages.py  processor.py  workflow.py  workspace.py
ocrd_webapi/rabbitmq/: __init__.py  config.toml  connector.py  constants.py  consumer.py  definitions.json  message_exchanger.py  ocrd_messages.py  producer.py  publisher.py
ocrd_webapi/routers/: discovery.py  processor.py  user.py  workflow.py  workspace.py
ocrd_webapi_test/: discovery.py  main.py  models.py  utils.py  workflow.py  workspace.py  workspace_manager.py
tests/: asserts_test.py  conftest.py  constants.py  docker-compose.yml  fixtures_modules.py  fixtures_rabbitmq.py  fixtures_workflow.py  fixtures_workspace.py  processor_config_test.yml  test_different_mets.py  test_main.py  test_processor.py  test_processor_api.py  test_rabbit_mq.py  test_webapi_utils.py  test_workflow_api.py  test_workspace_api.py  test_workspace_manager.py  utils_test.py
tests/assets/: nextflow-simple.nf  nextflow.nf
tests/fixtures/: fixtures_database.py  fixtures_rabbitmq.py  fixtures_server.py  fixtures_workflow.py  fixtures_workspace.py
things/: Dockerfile-Processing-Server  env-template  env-template-docker  env-template-localdev  example-processor-request.json  nextflow-simple-wo-venv.nf  nextflow-simple.nf  nextflow-wo-venv.nf  nextflow.nf  nextflow_dockerized.nf  processor_config_docker.yml  webapi_template_main.py  webapi_template_models.py
