[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/OCR-D/ocrd-webapi-implementation"

[tool.setuptools]
packages = ["ocrd_webapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = "tests/utils"
# for this to work pytest-env has to be installed
env = [
	"OCRD_WEBAPI_STORAGE_DIR = /tmp/ocrd_webapi_test",
	"OCRD_WEBAPI_DB_URL = mongodb://localhost:6701/test_operandi",
	"OCRD_WEBAPI_USERNAME = a",
	"OCRD_WEBAPI_PASSWORD = b",
	"OCRD_PROCESSOR_CONFIG = tests/processor_config_test.yml",
]

[flake8]
max-line-length = 100
ignore = ["F405", "F403", "W402", "W503", "F722"]


# https://flake8.pycqa.org/en/2.6.0/warnings.html
# F405: <name> may be undefined, or defined from star imports: module
# F403: from <module> import * used; unable to detect undefined names
# W402: <module> imported but unused
# W503: line break before binary operator
# F722: syntax error in forward annotation
