[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrd_webapi"
version = "0.9.0"
description = "Implementation of the OCR-D Web API"
readme = "readme.md"
requires-python = ">=3.7"
license = { text = "Apache License 2.0" }
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/OCR-D/ocrd-webapi-implementation"

[tool.setuptools]
packages = ["ocrd_webapi", "ocrd_webapi.routers"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = "tests/utils"

[flake8]
max-line-length = 100
ignore = ["F405", "F403", "W402", "W503", "F722"]


# https://flake8.pycqa.org/en/2.6.0/warnings.html
# F405: <name> may be undefined, or defined from star imports: module
# F403: from <module> import * used; unable to detect undefined names
# W402: <module> imported but unused
# W503: line break before binary operator
# F722: syntax error in forward annotation
