[metadata]
name = ocrd_webapi_implementation
version = 0.0.1
description = Implementation of the OCR-D-webapi
long_description = file: readme.md

[options]
packages =
	ocrd_webapi
install_requires =
	aiofiles==0.8.0
	anyio==3.6.1
	asgiref==3.4.1
	async-generator==1.10
	atomicwrites==1.4.1
	attrs==22.1.0
	bagit==1.8.1
	bagit-profile==1.3.1
	beanie==1.7.2
	certifi==2022.9.14
	charset-normalizer==2.0.12
	click==7.1.2
	contextlib2==21.6.0
	contextvars==2.4
	dataclasses==0.8
	Deprecated==1.2.0
	fastapi==0.83.0
	Flask==2.0.3
	h11==0.12.0
	httpcore==0.14.7
	httpx==0.22.0
	idna==3.4
	immutables==0.19
	importlib-metadata==4.8.3
	importlib-resources==5.4.0
	iniconfig==1.1.1
	itsdangerous==2.0.1
	Jinja2==3.0.3
	jsonschema==4.0.0
	lxml==4.9.1
	MarkupSafe==2.0.1
	motor==2.5.1
	multidict==5.2.0
	numpy==1.19.5
	ocrd==2.40.0
	ocrd-modelfactory==2.40.0
	ocrd-models==2.40.0
	ocrd-utils==2.40.0
	ocrd-validators==2.40.0
	opencv-python-headless==4.6.0.66
	packaging==21.3
	Pillow==8.4.0
	pluggy==1.0.0
	py==1.11.0
	pydantic==1.9.2
	pymongo==3.12.3
	pyparsing==3.0.9
	pyrsistent==0.18.0
	python-dotenv==0.20.0
	python-multipart==0.0.5
	PyYAML==6.0
	requests==2.27.1
	rfc3986==1.5.0
	Shapely==1.8.4
	six==1.16.0
	sniffio==1.2.0
	starlette==0.19.1
	toml==0.10.2
	tomli==1.2.3
	typing_extensions==4.1.1
	urllib3==1.26.12
	uvicorn==0.16.0
	Werkzeug==2.0.3
	wrapt==1.14.1
	yarl==1.7.2
	zipp==3.6.0
